--- a/Project/src/main/resources/templates/stranicaOglasa.html
+++ b/Project/src/main/resources/templates/stranicaOglasa.html
@@ -44,6 +44,15 @@
             <button class=' btn btn-outline-primary ' style='padding: 5px 10px;margin: 0px 5px'><i class='fas fa-thumbs-up '></i> Sviđa mi se</button>
             <button class=' btn btn-outline-primary ' style='padding: 5px 10px;margin: 0px 5px'><i class='fas fa-thumbs-down '></i>Ne sviđa mi se </button>
         </div>
+        <div id="dodajCV" class="cv-item">
+            <h6>Unesite Vaš CV</h6>
+            <textarea id="unesiCV"></textarea>
+            <div class='dugme'>
+                <button type='button' class='btn btn-outline-primary' id='oglas-link'>Pošalji CV</button>
+            </div>
+        </div>
+
+    </div>
     </div>
     <footer class="footer text-center ">
         <div class="container ">
