sredjeno jos malo
Fali samo profil da se lepo ucita

--- a/Project/src/main/resources/templates/index.html
+++ b/Project/src/main/resources/templates/index.html
@@ -92,7 +92,7 @@
                     <div class="portfolio-item mx-auto" data-bs-toggle="modal">
                         <!-- data-bs-target="#portfolioModal1">-->
                         <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                            <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
+                            <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-arrow-right fa-7x"></i></div>
                         </div>
                         <!--<img style="width: 100%" class="img-fluid" src="/img/portfolio/it.png" alt="..." />-->
                         <img style="width: 100%" class="img-fluid" src="img/portfolio/it.png" alt="..." />
@@ -103,7 +103,7 @@
                     <div class="portfolio-item mx-auto" data-bs-toggle="modal">
                         <!-- data-bs-target="#portfolioModal1">-->
                         <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                            <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
+                            <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-arrow-right fa-7x"></i></div>
                         </div>
                         <!--<img style="width: 100%" class="img-fluid" src="/img/portfolio/prosveta.png" />-->
 
@@ -115,7 +115,7 @@
                     <div class="portfolio-item mx-auto" data-bs-toggle="modal">
                         <!-- data-bs-target="#portfolioModal1">-->
                         <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                            <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
+                            <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-arrow-right fa-7x"></i></div>
                         </div>
                         <!--<img style="width: 100%" class="img-fluid" src="/img/portfolio/kuvanje.png" />-->
                         <img style="width: 100%" class="img-fluid" src="img/portfolio/kuvanje.png" />
@@ -127,7 +127,8 @@
                     <div class="portfolio-item mx-auto" data-bs-toggle="modal">
                         <!-- data-bs-target="#portfolioModal1">-->
                         <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                            <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
+                            <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-arrow-right fa-7x"></i>
+                            </div>
                         </div>
                         <!--<img style="width: 100%" class="img-fluid" src="/img/portfolio/gradjevina.png" />-->
                         <img style="width: 100%" class="img-fluid" src="img/portfolio/gradjevina.png" />
@@ -138,7 +139,7 @@
                     <div class="portfolio-item mx-auto" data-bs-toggle="modal">
                         <!-- data-bs-target="#portfolioModal1">-->
                         <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                            <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
+                            <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-arrow-right fa-7x"></i></div>
                         </div>
                         <!--<img style="width: 100%" class="img-fluid" src="/img/portfolio/ekonomija.png" />-->
                         <img style="width: 100%" class="img-fluid" src="img/portfolio/ekonomija.png" />
@@ -148,7 +149,7 @@
                 <div class="col-md-6 col-lg-4">
                     <div class="portfolio-item mx-auto" data-bs-toggle="modal" data-bs-target="#portfolioModal1">
                         <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                            <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
+                            <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-arrow-right fa-7x"></i></div>
                         </div>
                         <!--<img style="width: 100%" class="img-fluid" src="/img/portfolio/prosveta.png" />-->
                         <img style="width: 100%" class="img-fluid" src="img/portfolio/ostalo.png" />
