--- a/Project/src/main/resources/templates/sviOglasi.html
+++ b/Project/src/main/resources/templates/sviOglasi.html
@@ -44,12 +44,12 @@
                     <input class="filter-main" type="search" placeholder="Pretraži">
                 </div>
                 <div class="col-sm-3">
-                    <select class="filter-main" id="tagovi" value="Odaberite oblast rada">
+                    <select class="filter-main" id="tagovi" value="Odaberite oblast rada" onchange="promeniurl()">
                         <option value="0">---- Sve ----</option>
                         </select>
                 </div>
                 <div class="col-sm-3">
-                    <select class="filter-main" id="city-register" value="Odaberite lokaciju">
+                    <select class="filter-main" id="city-register" value="Odaberite lokaciju" onchange="promeniurl()">
                             <option value="0">Svi gradovi</option>
 
                         </select>
