--- a/Project/src/main/resources/templates/index.html
+++ b/Project/src/main/resources/templates/index.html
@@ -14,9 +14,10 @@
     <!--<link rel="stylesheet" href="/css/style.css" type="text/css"> -->
     <link rel="stylesheet" href="/css/style.css" type="text/css">
     <script src="/js/jQuery.js" type="text/javascript"></script>
+    <script src="/js/functions.js" type="text/javascript"></script>
 </head>
 
-<body id="page-top">
+<body id="page-top" onload="Dajgradove();Dajtagove();">
     <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
         <div class="container">
             <a class="navbar-brand" href="#page-top">Lako do posla</a>
@@ -56,14 +57,11 @@
                         <input class="filter-main" type="search" placeholder="Pretraži">
                     </div>
                     <div class="col-sm-3">
-                        <select class="filter-main" value="Odaberite oblast rada">
-                                <option>IT sektor</option>
+                        <select id="tagovi" class="filter-main" value="Odaberite oblast rada">
                             </select>
                     </div>
                     <div class="col-sm-3">
-                        <select class="filter-main" value="Odaberite lokaciju">
-                                <option>Svi gradovi</option>
-                                <option>Kragujevac</option>
+                        <select id="city-register" class="filter-main" value="Odaberite lokaciju">
                             </select>
                     </div>
                     <div class="col-sm-1">
