--- a/Project/src/main/resources/templates/index.html
+++ b/Project/src/main/resources/templates/index.html
@@ -65,7 +65,7 @@
                             </select>
                     </div>
                     <div class="col-sm-1">
-                        <button class="btn btn-primary btn-xl" id="filter-btn-main"><i style="width: 80%; height: 80%" class="fas fa-search"></i></button>
+                        <button class="btn btn-primary btn-xl" id="filter-btn-main" onclick="filtrirajOglase()"><i style="width: 80%; height: 80%" class="fas fa-search"></i></button>
                     </div>
                 </div>
             </div>
