--- a/Project/src/main/resources/templates/index.html
+++ b/Project/src/main/resources/templates/index.html
@@ -62,6 +62,7 @@
                     </div>
                     <div class="col-sm-3">
                         <select id="city-register" class="filter-main" value="Odaberite lokaciju">
+                            <option value="0">Svi gradovi</option>
                             </select>
                     </div>
                     <div class="col-sm-1">
@@ -87,7 +88,7 @@
             <div class="row justify-content-center">
                 <!-- Portfolio Item 1-->
                 <div class="col-md-6 col-lg-4 mb-5">
-                    <div class="portfolio-item mx-auto" data-bs-toggle="modal">
+                    <div class="portfolio-item mx-auto" data-bs-toggle="modal" onclick="usmeri(-1)">
                         <!-- data-bs-target="#portfolioModal1">-->
                         <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                             <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-arrow-right fa-7x"></i></div>
@@ -98,7 +99,7 @@
                 </div>
                 <!-- Portfolio Item 2-->
                 <div class="col-md-6 col-lg-4 mb-5">
-                    <div class="portfolio-item mx-auto" data-bs-toggle="modal">
+                    <div class="portfolio-item mx-auto" data-bs-toggle="modal" onclick="usmeri(-2)">
                         <!-- data-bs-target="#portfolioModal1">-->
                         <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                             <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-arrow-right fa-7x"></i></div>
@@ -110,7 +111,7 @@
                 </div>
                 <!-- Portfolio Item 3-->
                 <div class="col-md-6 col-lg-4 mb-5">
-                    <div class="portfolio-item mx-auto" data-bs-toggle="modal">
+                    <div class="portfolio-item mx-auto" data-bs-toggle="modal" onclick="usmeri(-3)">
                         <!-- data-bs-target="#portfolioModal1">-->
                         <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                             <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-arrow-right fa-7x"></i></div>
@@ -122,7 +123,7 @@
                 </div>
                 <!-- Portfolio Item 4-->
                 <div class="col-md-6 col-lg-4 mb-5 mb-lg-0">
-                    <div class="portfolio-item mx-auto" data-bs-toggle="modal">
+                    <div class="portfolio-item mx-auto" data-bs-toggle="modal" onclick="usmeri(-4)">
                         <!-- data-bs-target="#portfolioModal1">-->
                         <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                             <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-arrow-right fa-7x"></i>
@@ -134,7 +135,7 @@
                 </div>
                 <!-- Portfolio Item 5-->
                 <div class="col-md-6 col-lg-4 mb-5 mb-md-0">
-                    <div class="portfolio-item mx-auto" data-bs-toggle="modal">
+                    <div class="portfolio-item mx-auto" data-bs-toggle="modal" onclick="usmeri(-5)">
                         <!-- data-bs-target="#portfolioModal1">-->
                         <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                             <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-arrow-right fa-7x"></i></div>
@@ -145,7 +146,7 @@
                 </div>
                 <!-- Portfolio Item 6-->
                 <div class="col-md-6 col-lg-4">
-                    <div class="portfolio-item mx-auto" data-bs-toggle="modal" data-bs-target="#portfolioModal1">
+                    <div class="portfolio-item mx-auto" data-bs-toggle="modal" data-bs-target="#portfolioModal1" onclick="usmeri(0)">
                         <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                             <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-arrow-right fa-7x"></i></div>
                         </div>
