--- a/Project/src/main/resources/templates/profil.html
+++ b/Project/src/main/resources/templates/profil.html
@@ -30,19 +30,19 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-lg-3 col-md-2"></div>
-            <div class="col-lg-6 col-md-8 login-box">
-                <div class="col-lg-12 login-user">
+
+            <div class="col-lg-6 col-md-8 profile-box">
+                <div class="col-lg-12 profile-user">
                     <i class="far fa-user" aria-hidden="true"></i>
                 </div>
-                <div class="col-lg-12 login-title">
+                <div class="col-lg-12 profile-title">
                     <p id="profil-korisnicko-ime" name="korisnicko-ime"> KORISNICKO IME </p>
                 </div>
-                <div class="col-lg-12 login-form">
-                    <div class="col-lg-12 login-form">
+                <div class="col-lg-12 profile-form">
+                    <div class="col-lg-12 profile-form">
                         <form>
                             <div class="form-group">
-                                <label class="form-control-label">Ime i Prezime</label>
+                                <label class="form-control-label">Ime i prezime</label>
                                 <input type="text" value="Ime i Prezime" id="profil-ime" name="ime" class="form-control">
                             </div>
                             <div class="form-group">
@@ -79,8 +79,8 @@
                         </form>
                     </div>
                 </div>
+                <div class="col-lg-3 col-md-2"></div>
             </div>
-            <div class="col-lg-3 col-md-2"></div>
         </div>
     </div>
 
